# MLPotion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: MANUAL_DOCS_PUBLISH.yml  MANUAL_PYPI_PUBLISH.yml  PRECOMMITS.yml  PR_PREVIEW.yml  RELEASE.yml  UTESTS.yml
1.0.0/: index.html  sitemap.xml
1.0.0/api/: core.html
1.0.0/api/frameworks/: keras.html  pytorch.html
1.0.0/contributing/: overview.html
1.0.0/frameworks/: keras.html  pytorch.html
1.0.0/getting-started/: concepts.html  installation.html  quickstart.html
1.0.0/integrations/: zenml.html
1.0.0/search/: search_index.json
1.0.0/tutorials/: basic-pipeline.html  multi-framework.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/: core.html
1.0.1/api/frameworks/: keras.html  pytorch.html  tensorflow.html
1.0.1/api/integrations/: zenml.html
1.0.1/contributing/: overview.html
1.0.1/examples/: index.html
1.0.1/examples/keras/: zenml_pipeline.py
1.0.1/frameworks/: keras.html  pytorch.html  tensorflow.html
1.0.1/getting-started/: concepts.html  installation.html  quickstart.html
1.0.1/integrations/: zenml.html
1.0.1/search/: search_index.json
1.0.1/tutorials/: basic-pipeline.html  multi-framework.html  zenml-integration.html
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.0.2/api/: core.html
1.0.2/api/frameworks/: keras.html  pytorch.html  tensorflow.html
1.0.2/api/integrations/: zenml.html
1.0.2/contributing/: overview.html
1.0.2/examples/: index.html
1.0.2/frameworks/: keras.html  pytorch.html  tensorflow.html
1.0.2/getting-started/: concepts.html  installation.html  quickstart.html
1.0.2/integrations/: zenml.html
1.0.2/search/: search_index.json
1.0.2/tutorials/: basic-pipeline.html  multi-framework.html  zenml-integration.html
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/api/: core.html
1.1.0/api/frameworks/: keras.html  pytorch.html  tensorflow.html
1.1.0/api/integrations/: flowyml.html  zenml.html
1.1.0/contributing/: overview.html
1.1.0/examples/: index.html
1.1.0/frameworks/: keras.html  pytorch.html  tensorflow.html
1.1.0/getting-started/: concepts.html  installation.html  quickstart.html
1.1.0/integrations/: flowyml.html  zenml.html
1.1.0/search/: search_index.json
1.1.0/tutorials/: basic-pipeline.html  flowyml-custom-pipeline.html  multi-framework.html  zenml-integration.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/api/: core.html
1.2.0/api/frameworks/: keras.html  pytorch.html  tensorflow.html
1.2.0/api/integrations/: flowyml.html  zenml.html
1.2.0/contributing/: overview.html
1.2.0/examples/: index.html
1.2.0/examples/pytorch/: zenml_pipeline.py
1.2.0/examples/tensorflow/: standalone.py  zenml_pipeline.py
1.2.0/frameworks/: keras.html  pytorch.html  tensorflow.html
1.2.0/getting-started/: concepts.html  installation.html  quickstart.html
1.2.0/integrations/: flowyml.html  zenml.html
1.2.0/search/: search_index.json
1.2.0/tutorials/: basic-pipeline.html  flowyml-custom-pipeline.html  flowyml-experiment-tracking.html  flowyml-quickstart.html  flowyml-scheduled-retraining.html  multi-framework.html  zenml-integration.html
docs/: DESIGN_PATTERN.md  ML Steps Implementation.md  class_design_patterns.md  index.md
docs/api/: core.md
docs/api/frameworks/: keras.md  pytorch.md  tensorflow.md
docs/api/integrations/: flowyml.md  zenml.md
docs/contributing/: overview.md
docs/examples/keras/: standalone.py  zenml_pipeline.py
docs/examples/pytorch/: standalone.py
docs/examples/tensorflow/: standalone.py
docs/frameworks/: keras.md  pytorch.md  tensorflow.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/integrations/: flowyml.md  zenml.md
docs/tutorials/: basic-pipeline.md  flowyml-custom-pipeline.md  flowyml-experiment-tracking.md  flowyml-quickstart.md  flowyml-scheduled-retraining.md  multi-framework.md  zenml-integration.md
examples/: README.md
examples/keras/: basic_usage.py  zenml_pipeline.py
examples/pytorch/: basic_usage.py  zenml_pipeline.py
examples/tensorflow/: basic_usage.py  zenml_pipeline.py
latest/: 404.html
latest/api/frameworks/: keras.html  tensorflow.html
latest/api/integrations/: zenml.html
latest/examples/: index.html
latest/examples/keras/: standalone.py
latest/frameworks/: tensorflow.html
latest/search/: search_index.json
latest/tutorials/: flowyml-experiment-tracking.html  flowyml-quickstart.html  flowyml-scheduled-retraining.html  zenml-integration.html
mlpotion/: __init__.py
mlpotion/core/: __init__.py  config.py  exceptions.py  protocols.py  results.py
mlpotion/frameworks/: __init__.py
mlpotion/frameworks/keras/: __init__.py  config.py
mlpotion/frameworks/keras/data/: __init__.py  loaders.py  transformers.py
mlpotion/frameworks/keras/deployment/: __init__.py  exporters.py  persistence.py
mlpotion/frameworks/keras/evaluation/: __init__.py  evaluators.py
mlpotion/frameworks/keras/models/: __init__.py  debug.ipynb  inspection.py
mlpotion/frameworks/keras/training/: __init__.py  trainers.py
mlpotion/frameworks/keras/utils/: __init__.py  formatter.py
mlpotion/frameworks/pytorch/: __init__.py  config.py
mlpotion/frameworks/pytorch/data/: __init__.py  datasets.py  loaders.py  transformers.py
mlpotion/frameworks/pytorch/deployment/: __init__.py  exporters.py  persistence.py
mlpotion/frameworks/pytorch/evaluation/: __init__.py  evaluators.py
mlpotion/frameworks/tensorflow/: __init__.py  config.py
mlpotion/integrations/: __init__.py
mlpotion/integrations/flowyml/: __init__.py  adapters.py
mlpotion/integrations/zenml/: __init__.py  adapters.py
mlpotion/utils/: __init__.py  data.py  decorators.py  framework.py  logging.py
tests/: core.py
tests/frameworks/tensorflow/: test_config.py
tests/integrations/flowyml_integration/: conftest.py  test_adapters.py
tests/integrations/zenml_integration/: README.md  __init__.py  conftest.py
(+61 files in other folders)
